--- a/controller/src/main/resources/controller.yml
+++ b/controller/src/main/resources/controller.yml
@@ -9,6 +9,10 @@ spring:
       discovery:
         enabled: true
         root: /mandrel
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
           
 server:
   port: 8080
