--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -91,6 +91,16 @@
 			<artifactId>wrapper</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.owasp.esapi</groupId>
+			<artifactId>esapi</artifactId>
+			<version>2.0GA</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
