--- a/core/pom.xml
+++ b/core/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>parboiled-java</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>de.undercouch</groupId>
+			<artifactId>bson4jackson</artifactId>
+			<version>2.5.0</version>
+		</dependency>
+
 		<!-- Jackson -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
