--- a/core/pom.xml
+++ b/core/pom.xml
@@ -238,6 +238,10 @@
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.11</artifactId>
+		</dependency>
 
 		<!-- Spring -->
 		<dependency>
