--- a/worker/src/main/resources/worker.yml
+++ b/worker/src/main/resources/worker.yml
@@ -2,6 +2,8 @@ spring:
   pidfile: worker.pid
   application:
     name: worker
+    admin:
+      enabled: false      
   cloud:
     zookeeper:
       enabled: true
@@ -9,6 +11,8 @@ spring:
       discovery:
         enabled: true
         root: /mandrel
-                    
+  jmx:
+    enabled: false
+                        
 server:
   port: 8070
