--- a/controller/src/main/resources/controller.yml
+++ b/controller/src/main/resources/controller.yml
@@ -21,6 +21,12 @@ spring:
           
 server:
   port: 8080
+  undertow:
+    buffer-size: 16000
+    buffers-per-region: 20
+    direct-buffers: true
+    io-threads: 4
+    worker-threads: 32 
   
 # Client, Requesters & Strategies
 client: 
