--- a/pom.xml
+++ b/pom.xml
@@ -398,10 +398,22 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+			<!-- <dependency> -->
+			<!-- <groupId>org.apache.kafka</groupId> -->
+			<!-- <artifactId>kafka-clients</artifactId> -->
+			<!-- <version>0.8.2.0</version> -->
+			<!-- </dependency> -->
+			<!-- TO BE REMOVED -->
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka_2.11</artifactId>
 				<version>0.8.2.2</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>log4j</artifactId>
+						<groupId>log4j</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 			<dependency>
