--- a/worker/src/main/resources/worker.yml
+++ b/worker/src/main/resources/worker.yml
@@ -11,6 +11,7 @@ spring:
       discovery:
         enabled: true
         root: /mandrel
+        instanceHost: localhost
   jmx:
     enabled: false
                         
