Remove useless dependencies

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -83,6 +83,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
 		</dependency>
