--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,12 @@
 				<version>1.14.8</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.apache.thrift</groupId>
+				<artifactId>libthrift</artifactId>
+				<version>0.9.3</version>
+			</dependency>
+
 			<!-- Monitoring -->
 			<dependency>
 				<groupId>org.hyperic</groupId>
@@ -398,16 +404,16 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
-			<!-- <dependency> -->
-			<!-- <groupId>org.apache.kafka</groupId> -->
-			<!-- <artifactId>kafka-clients</artifactId> -->
-			<!-- <version>0.8.2.0</version> -->
-			<!-- </dependency> -->
-			<!-- TO BE REMOVED -->
+
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
-				<artifactId>kafka_2.11</artifactId>
-				<version>0.8.2.2</version>
+				<artifactId>kafka-clients</artifactId>
+				<version>0.9.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.kafka</groupId>
+				<artifactId>kafka_2.10</artifactId>
+				<version>0.9.0.0-SNAPSHOT</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>log4j</artifactId>
@@ -1082,6 +1088,14 @@ org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UT
 			<url>http://repo.spring.io/release</url>
 			<snapshots>
 				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>cloudera</id>
+			<name>cloudera</name>
+			<url>https://repository.cloudera.com/cloudera/cloudera-repos</url>
+			<snapshots>
+				<enabled>true</enabled>
 			</snapshots>
 		</repository>
 		<repository>
