--- a/pom.xml
+++ b/pom.xml
@@ -282,6 +282,16 @@
 				<artifactId>libthrift</artifactId>
 				<version>0.9.3</version>
 			</dependency>
+			<dependency>
+				<groupId>com.facebook.swift</groupId>
+				<artifactId>swift-codec</artifactId>
+				<version>0.16.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.facebook.swift</groupId>
+				<artifactId>swift-service</artifactId>
+				<version>0.16.0</version>
+			</dependency>
 
 			<!-- Monitoring -->
 			<dependency>
@@ -418,6 +428,10 @@
 					<exclusion>
 						<artifactId>log4j</artifactId>
 						<groupId>log4j</groupId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
