--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
 		<java.version>1.8</java.version>
 
 		<!-- Dependencies -->
-		<spring-boot.version>1.3.0.BUILD-SNAPSHOT</spring-boot.version>
-		<spring-cloud.version>Brixton.BUILD-SNAPSHOT</spring-cloud.version>
-		<spring-cloud-zookeper.version>1.0.0.BUILD-SNAPSHOT</spring-cloud-zookeper.version>
+		<spring-boot.version>1.3.1.RELEASE</spring-boot.version>
+		<spring-cloud.version>Brixton.M4</spring-cloud.version>
+		<spring-cloud-zookeper.version>1.0.0.M4</spring-cloud-zookeper.version>
 
 		<jackson.version>2.6.0</jackson.version>
 		<netty.version>4.1.0.Beta5</netty.version>
@@ -291,6 +291,12 @@
 				<groupId>com.facebook.swift</groupId>
 				<artifactId>swift-service</artifactId>
 				<version>0.16.0</version>
+				<exclusions>
+					<exclusion>
+						<artifactId>bval-jsr303</artifactId>
+						<groupId>org.apache.bval</groupId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 
 			<!-- Monitoring -->
