--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,6 @@
 
 		<!-- Dependencies -->
 		<spring-boot.version>1.3.1.RELEASE</spring-boot.version>
-		<spring-cloud.version>Brixton.M4</spring-cloud.version>
-		<spring-cloud-zookeper.version>1.0.0.M4</spring-cloud-zookeper.version>
 
 		<jackson.version>2.6.0</jackson.version>
 		<netty.version>4.1.0.Beta5</netty.version>
@@ -76,6 +74,17 @@
 				<groupId>com.google.code.findbugs</groupId>
 				<artifactId>jsr305</artifactId>
 				<version>3.0.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.inject</groupId>
+				<artifactId>javax.inject</artifactId>
+				<version>1</version>
+			</dependency>
+			<dependency>
+				<groupId>cglib</groupId>
+				<artifactId>cglib-nodep</artifactId>
+				<version>2.2</version>
 			</dependency>
 
 			<!-- Commons -->
@@ -404,6 +413,12 @@
 				<groupId>org.mongodb</groupId>
 				<artifactId>mongodb-driver</artifactId>
 				<version>3.1.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.curator</groupId>
+				<artifactId>curator-x-discovery</artifactId>
+				<version>2.8.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.zookeeper</groupId>
