--- a/controller/src/main/resources/controller.yml
+++ b/controller/src/main/resources/controller.yml
@@ -6,18 +6,21 @@ spring:
       enabled: false
   data:
     mongodb:
-      host: localhost
-      port: 27017
+      uri: mongodb://localhost:27017/mandrel
   jmx:
     enabled: false
 
 discovery:
+  instanceHost: localhost
   zookeeper:
     enabled: true
     connectString: localhost:2181
     root: /mandrel
-    instanceHost: localhost
-              
+
+transport:
+  bindAddress: localhost
+  port: 8090
+                  
 server:
   port: 8080
   undertow:
