--- a/pom.xml
+++ b/pom.xml
@@ -440,12 +440,12 @@
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka-clients</artifactId>
-				<version>0.9.0.0-SNAPSHOT</version>
+				<version>0.9.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.kafka</groupId>
 				<artifactId>kafka_2.10</artifactId>
-				<version>0.9.0.0-SNAPSHOT</version>
+				<version>0.9.0.0</version>
 				<exclusions>
 					<exclusion>
 						<artifactId>log4j</artifactId>
