--- a/standalone/src/main/resources/standalone.yml
+++ b/standalone/src/main/resources/standalone.yml
@@ -36,6 +36,7 @@ logging:
   level:
     org.springframework: INFO
     io.mandrel: DEBUG
+    io.mandrel.worker.Loop: TRACE
     
 management:
   context-path: /admin
