--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -173,6 +173,17 @@
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
+				<excludes>
+					<exclude>public/**</exclude>
+				</excludes>
+			</resource>
+
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>false</filtering>
+				<includes>
+					<include>public/**</include>
+				</includes>
 			</resource>
 		</resources>
 
