--- a/controller/src/main/webapp/WEB-INF/wro.properties
+++ b/controller/src/main/webapp/WEB-INF/wro.properties
@@ -11,7 +11,9 @@ jmxEnabled=true
 parallelPreprocessing=false
 managerFactoryClassName=ro.isdc.wro.manager.factory.ConfigurableWroManagerFactory
 
-preProcessors=cssUrlRewriting,cssImport,semicolonAppender
+# no cssUrlRewriting since WRO4J can not manage fonts... cf pom.xml
+#preProcessors=cssUrlRewriting,cssImport,semicolonAppender
+preProcessors=cssImport,semicolonAppender
 postProcessors=cssMinJawr,googleClosureSimple
 #postProcessors=cssVariables,googleClosureSimple,yuiCssMin
 
