--- a/pom.xml
+++ b/pom.xml
@@ -350,6 +350,11 @@
 				<version>3.3.4</version>
 			</dependency>
 			<dependency>
+				<groupId>org.webjars</groupId>
+				<artifactId>momentjs</artifactId>
+				<version>2.9.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.webjars.bower</groupId>
 				<artifactId>bootstrap-3-datepicker</artifactId>
 				<version>1.4.0</version>
