--- a/core/pom.xml
+++ b/core/pom.xml
@@ -127,7 +127,6 @@
 			<artifactId>jackson-module-jsonSchema</artifactId>
 		</dependency>
 
-
 		<!-- Data format -->
 		<dependency>
 			<groupId>org.jsoup</groupId>
@@ -209,7 +208,10 @@
 			<groupId>org.hyperic</groupId>
 			<artifactId>sigar</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.isomorphism</groupId>
+			<artifactId>token-bucket</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
@@ -231,7 +233,7 @@
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
