--- a/core/pom.xml
+++ b/core/pom.xml
@@ -246,6 +246,11 @@
 			<groupId>biz.paluch.redis</groupId>
 			<artifactId>lettuce</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>2.1.1</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
