--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -89,6 +89,18 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>datatables</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>morrisjs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>raphaeljs</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-knob</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.freemarker</groupId>
